# RGC-DINO-R50

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: codetr_internimage_l_aic2026_test.py  codetr_internimage_l_eval_s768.py  codetr_internimage_l_eval_s832.py  codetr_internimage_l_eval_s832true.py  codetr_internimage_l_eval_s896.py  codetr_internimage_l_highres_ft.py  codetr_internimage_l_mm_config.py  codetr_internimage_l_stage0.yaml  codetr_r50_stage0_mm_config.py  codetr_r50_tiny_mm_config.py  deepspeed_config.json  default.yaml  dino_a0_rgb_4scale.py  dino_r50_4scale.yaml  swin_l_stage1.yaml
data/: README.md
docs/: 2x3090_FEASIBLE_ROADMAP.md  CODETR_INTERNIMAGE_L_TRAINING_HANDOFF.md  FINAL_ROADMAP.md  OPPONENT_URBAN_VISUAL_RECOGNITION_LESSONS.md  README.md
scripts/: analyze_rdt_prediction_correlation.py  audit_weight_load_report.py  auto_submit_best.sh  cache_codetr_predictions.py  cache_quality_features.py  cap_top100.py  check_codetr_batch_smoke.py  check_codetr_environment.py  check_codetr_integration.py  check_dino_integration.py  check_environment.py  check_fold_completion.py  check_leaderboard.py  codetr_results_to_submission.py  continue_codetr_internimage_l_stage1.sh  diagnose_rdt_saliency.py  download_swin_weights.sh  ensemble_submissions.py  eval_on_val.py  eval_single_checkpoint.sh  evaluate_predictions.py  export_coco_rgb.py  export_codetr_coco.py  export_codetr_test_coco.py  fasttrack_codetr_checkpoint.sh  fuse_multifold_predictions.py  incremental_submit.sh  infer_3fold_fusion_test.py  infer_baseline.py  infer_rgc_dino.py  (+37 more)
(+2077 files in other folders)
